[package]
name = "partiql-parser"
authors = ["PartiQL Team <partiql-team@amazon.com>"]
description = "PartiQL Parser"
homepage = "https://github.com/partiql/partiql-lang-rust"
repository = "https://github.com/partiql/partiql-lang-rust"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
  "**/.git/**",
  "**/.github/**",
  "**/.travis.yml",
  "**/.appveyor.yml",
]
edition = "2021"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "~0.19.7"

[dependencies]
partiql-ast = { path = "../partiql-ast" }
partiql-source-map = { path = "../partiql-source-map" }

thiserror = "~1.0.24"

num-traits = "~0.2.14"
num-bigint = "~0.4.0"
bigdecimal = "~0.2.0"
rust_decimal = { version = "1.25.0", default-features = false, features = ["std"] }

lalrpop-util = "~0.19.7"
logos = "~0.12.0"

itertools = "~0.10.3"

regex = "~1.5.5"
lazy_static = "~1.4.0"

serde = { version = "1.*", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3"

[features]
default = []
serde = [
  "dep:serde",
  "rust_decimal/serde-with-str",
  "partiql-ast/serde",
  "partiql-source-map/serde"
]

[[bench]]
name = "bench_parse"
harness = false
