[package]
name = "partiql-parser"
description = "PartiQL Parser"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.22"

[dependencies]
partiql-ast = { path = "../partiql-ast", version = "0.11.*" }
partiql-common = { path = "../partiql-common", version = "0.11.*" }

thiserror = "1.0"

num-traits = "0.2"
rust_decimal = { version = "1.36.0", default-features = false, features = ["std"] }

bitflags = "2"

lalrpop-util = "0.22"
logos = "0.15"

itertools = "0.14"

regex = "1.10"
once_cell = "1"

serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
assert_matches = "1"

[features]
default = []
serde = [
    "dep:serde",
    "rust_decimal/serde-with-str",
    "partiql-ast/serde",
    "partiql-common/serde"
]

[[bench]]
name = "bench_parse"
harness = false
