[package]
name = "partiql-rewriter"
authors = ["PartiQL Team <partiql-team@amazon.com>"]
description = "PartiQL Rewriter Framework"
homepage = "https://github.com/partiql/partiql-lang-rust"
repository = "https://github.com/partiql/partiql-lang-rust"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
  "**/.git/**",
  "**/.github/**",
  "**/.travis.yml",
  "**/.appveyor.yml",
]
edition = "2021"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
regex-syntax = "0.6.25"
rand = "0.8.5"
rand_chacha = "0.3.1"
criterion = "0.3"

[[bench]]
name = "bench_pattern_match"
harness = false
