[package]
name = "partiql-source-map"
authors = ["PartiQL Team <partiql-team@amazon.com>"]
description = "PartiQL Source Map"
homepage = "https://github.com/partiql/partiql-lang-rust"
repository = "https://github.com/partiql/partiql-lang-rust"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "sourcemap", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
]
edition = "2021"
version = "0.1.1-alpha.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = { version = "~1.8.0" }
serde = { version = "1.*", features = ["derive"], optional = true }


[dev-dependencies]


[features]
default = []
serde = ["dep:serde", "smallvec/serde"]
