[package]
name = "partiql-source-map"
description = "PartiQL Source Map"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "sourcemap", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
smallvec = { version = "1.*" }
serde = { version = "1.*", features = ["derive"], optional = true }

anymap = "1.0.0-beta.2"


[dev-dependencies]


[features]
default = []
serde = ["dep:serde", "smallvec/serde"]
