[package]
name = "partiql-types"
description = "PartiQL Type Definitions"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
  "**/.git/**",
  "**/.github/**",
  "**/.travis.yml",
  "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.*"
itertools = "0.10.*"
unicase = "2.*"

[dev-dependencies]
criterion = "0.4"
