[package]
name = "partiql-types"
description = "PartiQL Type Definitions"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-common = { path = "../partiql-common", version = "0.11.*" }
itertools = "0.14"

miette = { version = "7", features = ["fancy"] }
thiserror = "1"

indexmap = "2"

educe = "0.6"

[dev-dependencies]
