[package]
name = "partiql-value"
description = "PartiQL Values"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
  "**/.git/**",
  "**/.github/**",
  "**/.travis.yml",
  "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
ordered-float = "3.*"
itertools = "0.10.*"
unicase = "2.6"
rust_decimal = { version = "1.25.0", default-features = false, features = ["std"] }
rust_decimal_macros = "1.26"
ion-rs = "0.17"
time = { version = "0.3", features = ["macros"] }
once_cell = "1"
regex = "1.7"

serde = { version = "1.*", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.4"

[features]
default = []
serde = [
  "dep:serde",
  "time/serde",
  "rust_decimal/serde-with-str",
  "rust_decimal/serde",
  "ordered-float/serde"
]
