[package]
name = "partiql-value"
description = "PartiQL Values"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-common = { path = "../partiql-common", version = "0.12.*" }
partiql-types = { path = "../partiql-types", version = "0.12.*" }
lasso = "0.7"
delegate = "0.13"
ordered-float = "5"
itertools = "0.14"
unicase = "2.7"
rust_decimal = { version = "1.36.0", default-features = false, features = ["std"] }
rust_decimal_macros = "1.36"
thiserror = "1.0"

time = { version = "0.3", features = ["macros"] }
pretty = "0.12"

serde = { version = "1", features = ["derive"], optional = true }
typetag = { version = "0.2", optional = true }



dyn-clone = "1"
dyn-hash = "0.2"

[dev-dependencies]

[features]
default = []
serde = [
    "dep:serde",
    "dep:typetag",
    "time/serde",
    "rust_decimal/serde-with-str",
    "rust_decimal/serde",
    "ordered-float/serde"
]
