[package]
name = "partiql"
description = "PartiQL in Rust"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
  "**/.git/**",
  "**/.github/**",
  "**/.travis.yml",
  "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]

[dev-dependencies]
partiql-parser = { path = "../partiql-parser" }
partiql-ast = { path = "../partiql-ast" }
partiql-value = { path = "../partiql-value" }
partiql-logical = { path = "../partiql-logical" }
partiql-logical-planner = { path = "../partiql-logical-planner" }
partiql-eval = { path = "../partiql-eval" }

itertools = "0.10"
criterion = "0.4"
iai = { git = "https://github.com/bheisler/iai" }
rand = "0.8"
once_cell = "1.17"

[[bench]]
name = "bench_eval_multi_like"
harness = false

[[bench]]
name = "bench_eval_multi_like_iai"
harness = false
