[package]
name = "partiql"
description = "PartiQL in Rust"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers", "parser-implementations"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]

[dev-dependencies]
partiql-parser = { path = "../partiql-parser" }
partiql-ast = { path = "../partiql-ast" }
partiql-ast-passes = { path = "../partiql-ast-passes" }
partiql-common = { path = "../partiql-common" }
partiql-catalog = { path = "../partiql-catalog" }
partiql-value = { path = "../partiql-value" }
partiql-logical = { path = "../partiql-logical" }
partiql-logical-planner = { path = "../partiql-logical-planner" }
partiql-eval = { path = "../partiql-eval" }
partiql-extension-value-functions = { path = "../extension/partiql-extension-value-functions" }

insta = "1.40.0"


thiserror = "1.0"

itertools = "0.13"
rust_decimal = { version = "1.25.0", default-features = false, features = ["std"] }
time = { version = "0.3", features = ["macros"] }

criterion = "0.5"
rand = "0.8"

assert_matches = "1"

[[bench]]
name = "bench_eval_multi_like"
harness = false

[[bench]]
name = "bench_agg"
harness = false
