[package]
name = "pest-ion"
authors = ["PartiQL Team <partiql-team@amazon.com>"]
description = "A simple Pest grammar to Ion converter"
homepage = "https://github.com/partiql/partiql-lang-rust/pest-ion"
repository = "https://github.com/partiql/partiql-lang-rust/pest-ion"
license = "Apache-2.0"
readme = "README.md"
keywords = ["parser", "peg", "pest", "ion", "cli"]
categories = ["parser-implementations", "command-line-utilities"]
exclude = [
  "**/.git/**",
  "**/.github/**",
  "**/.travis.yml",
  "**/.appveyor.yml",
]
edition = "2018"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "~1.0.25"
pest = "~2.1.3"
pest_meta = "~2.1.3"
ion-rs = "~0.6.0"
smallvec = "~1.6.1"

[dev-dependencies]
rstest = "~0.10.0"
