[package]
name = "partiql-extension-ddl"
description = "PartiQL DDL extensions"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["sql", "ddl", "definition-language", "compilers", "interpreters"]
categories = ["database", "compilers",]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-types = { path = "../../partiql-types", version = "0.10.*" }

thiserror = "1.0"
miette = { version = "7.2", features = ["fancy"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

indexmap = "2.2"

[dev-dependencies]
criterion = "0.4"

[features]
default = []
