[package]
name = "partiql-extension-ion-functions"
description = "PartiQL Ion function extensions"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-extension-ion = { path = "../partiql-extension-ion", version = "0.12.*" }
partiql-value = { path = "../../partiql-value", version = "0.12.*" }
partiql-catalog = { path = "../../partiql-catalog", version = "0.12.*" }
partiql-logical = { path = "../../partiql-logical", version = "0.12.*" }

ordered-float = "5"
itertools = "0.14"
unicase = "2.7"
rust_decimal = { version = "1.36.0", default-features = false, features = ["std"] }
ion-rs_old = { version = "0.18", package = "ion-rs" }
ion-rs = { version = "1.0.0-rc.11", features = ["experimental"] }
time = { version = "0.3", features = ["macros"] }
once_cell = "1"
regex = "1.10"
thiserror = "1.0"
delegate = "0.13"
zstd = "0.13"
flate2 = "1.0"

[dev-dependencies]
partiql-parser = { path = "../../partiql-parser", version = "0.12.*" }
partiql-logical = { path = "../../partiql-logical", version = "0.12.*" }
partiql-logical-planner = { path = "../../partiql-logical-planner", version = "0.12.*" }
partiql-eval = { path = "../../partiql-eval", version = "0.12.*" }

insta = "1"

[features]
default = []
