[package]
name = "partiql-extension-ion"
description = "PartiQL Ion extensions"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
  "**/.git/**",
  "**/.github/**",
  "**/.travis.yml",
  "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-value = { path = "../../partiql-value", version = "0.5.*" }
ordered-float = "3.*"
itertools = "0.10.*"
unicase = "2.6"
rust_decimal = { version = "1.25.0", default-features = false, features = ["std"] }
rust_decimal_macros = "1.26"
ion-rs = "0.17"
time = { version = "0.3", features = ["macros"] }
once_cell = "1"
regex = "1.7"
thiserror = "1.0"
delegate = "0.9"

[dev-dependencies]
criterion = "0.4"

[features]
default = []
