[package]
name = "partiql-extension-ion"
description = "PartiQL Ion extensions"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["sql", "parser", "query", "compilers", "interpreters"]
categories = ["database", "compilers"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
]
version.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
partiql-value = { path = "../../partiql-value", version = "0.13.*" }
partiql-common = { path = "../../partiql-common", version = "0.13.*" }
partiql-types = { path = "../../partiql-types", version = "0.13.*" }

serde = { version = "1", features = ["derive"], optional = true }
typetag = { version = "0.2", optional = true }

ordered-float = "5"
itertools = "0.14"
unicase = "2.7"
rust_decimal = { version = "1.36.0", default-features = false, features = ["std"] }
rust_decimal_macros = "1.36"
ion-rs_old = { version = "0.18", package = "ion-rs" }
ion-rs = { version = "1.0.0-rc.11", features = ["experimental", "experimental-ion-hash", "sha2"] }

time = { version = "0.3", features = ["macros"] }
once_cell = "1"
regex = "1.10"
thiserror = "1.0"
delegate = "0.13"
peekmore = "1.3"

[dev-dependencies]
insta = "1"
walkdir = "2.5"

[features]
default = []
serde = [
    "dep:serde",
    "dep:typetag",
    "partiql-value/serde",
    "partiql-common/serde"
]
